[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/player/sprites/shot-1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/EnemyShoot.gd" type="Script" id=2]
[ext_resource path="res://assets/player/sounds/Shoot.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/player/sprites/shot-2.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 6 )

[node name="EnemyShoot" type="Area2D" groups=[
"enemy_shoot",
]]
modulate = Color( 0.917647, 0.129412, 0.129412, 1 )
rotation = 3.14159
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[node name="SoundShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -3, -6, 5, 12 )

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Shoot_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
